3_Ano/2_sem/PL/cinema/grammar.txt
cinema: [ Lista ]

Lista: Lista , Filme
      | Filme

Filme: { Titulo , Ano , Elenco , Generos }

Titulo: TITLE STR

Ano: YEAR INT

Elenco: CAST [ ListaStr ]

ListaStr: ListaStr , STR
          | STR

Generos: GENRES ListaStr
